// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON schema creation with abstract types json schema creation 1`] = `
{
  "properties": {
    "data": {
      "nullable": true,
      "properties": {
        "u": {
          "nullable": true,
          "properties": {},
          "type": "object",
        },
      },
      "type": "object",
    },
    "errors": {
      "items": {
        "additionalProperties": true,
        "properties": {
          "locations": {
            "items": {
              "properties": {
                "column": {
                  "type": "number",
                },
                "line": {
                  "type": "number",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "message": {
            "type": "string",
          },
          "path": {
            "items": {
              "type": [
                "string",
                "number",
              ],
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`json schema creator json schema creation 1`] = `
{
  "properties": {
    "data": {
      "nullable": true,
      "properties": {
        "article": {
          "nullable": true,
          "properties": {
            "author": {
              "nullable": false,
              "properties": {
                "email": {
                  "nullable": true,
                  "type": "string",
                },
                "extra": {
                  "additionalProperties": true,
                  "nullable": true,
                  "type": "object",
                },
                "id": {
                  "nullable": false,
                  "type": "string",
                },
                "name": {
                  "nullable": true,
                  "type": "string",
                },
                "pic": {
                  "nullable": true,
                  "properties": {
                    "height": {
                      "nullable": true,
                      "type": "integer",
                    },
                    "url": {
                      "nullable": true,
                      "type": "string",
                    },
                    "width": {
                      "nullable": true,
                      "type": "integer",
                    },
                  },
                  "type": "object",
                },
                "recentArticle": {
                  "nullable": true,
                  "properties": {
                    "body": {
                      "nullable": true,
                      "type": "string",
                    },
                    "id": {
                      "nullable": false,
                      "type": "string",
                    },
                    "isPublished": {
                      "nullable": true,
                      "type": "boolean",
                    },
                    "title": {
                      "nullable": true,
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
              "type": "object",
            },
            "body": {
              "nullable": true,
              "type": "string",
            },
            "id": {
              "nullable": false,
              "type": "string",
            },
            "isPublished": {
              "nullable": true,
              "type": "boolean",
            },
            "title": {
              "nullable": true,
              "type": "string",
            },
          },
          "type": "object",
        },
        "feed": {
          "items": {
            "nullable": true,
            "properties": {
              "id": {
                "nullable": false,
                "type": "string",
              },
              "title": {
                "nullable": true,
                "type": "string",
              },
            },
            "type": "object",
          },
          "nullable": true,
          "type": "array",
        },
      },
      "type": "object",
    },
    "errors": {
      "items": {
        "additionalProperties": true,
        "properties": {
          "locations": {
            "items": {
              "properties": {
                "column": {
                  "type": "number",
                },
                "line": {
                  "type": "number",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "message": {
            "type": "string",
          },
          "path": {
            "items": {
              "type": [
                "string",
                "number",
              ],
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;
